--- a/src/main/resources/templates/selector.html
+++ b/src/main/resources/templates/selector.html
@@ -49,7 +49,8 @@
 </div>  
 
 
-<script>  
+<script> 
+
     $(document).ready(function () {  
   
         var ddlCountry = $('#ddlCountry');  
@@ -65,135 +66,50 @@
              
         });
 
-
         $("#ddlCountry").change(function () {  
-            var countryId = parseInt($(this).val());
-
-            //alert(countryId);            
+            var countryId = parseInt($(this).val());         
 
             if (!isNaN(countryId)) {  
                 var ddlState = $('#ddlState');  
                 var ur = 'states/' + countryId;
-
-                //alert(ur);
-                //svar data = {'countryId': countryId}
-                
+               
                 //ddlState.empty();  
                 ddlState.append($("<option></option>").val('').html('Please wait ...'));
 
                 $.get(ur, function(responseJson) {
-                    var $select2 = $("#ddlState");
-                    $select2.find("option").remove();  
-                    $.each(responseJson, function(index, state) {
-                        //alert(state.stateId);
-                        //alert(state.stateName);
-                        $("<option>").val(state.stateId).text(state.stateName).appendTo($select2);
-                    	//ddlState.append($("<option></option>").val(states.stateId).html(states.stateName));
+                    var $select = $("#ddlState");
+                    $select.find("option").remove();  
+                    $.each(responseJson, function(index, state) {                        
+                        $("<option>").val(state.stateId).text(state.stateName).appendTo($select);                    	
                     });                   
                      
                 });
-
-
-// 	             $.ajax({  
-// 		             url: ur,  
-// 		             type: 'GET',  
-// 		             dataType: 'json',  
-// 		             //data: {countryId: countryId},  
-// 		             success: function (d) {  
-		
-// 		                 ddlState.empty(); // Clear the please wait  
-// 		                 ddlState.append($("<option></option>").val('').html('Select State'));  
-// 		                 $.each(d, function (i, states) {  
-// 		                     ddlState.append($("<option></option>").val(states.stateId).html(states.stateName));  
-// 		                 });  
-// 		             },  
-// 		             error: function () {  
-// 		                 alert('Error!');
-		                  
-// 		             }  
-// 		         });  
-
             }
         });
 
+        $("#ddlState").change(function () {  
+            var stateId = parseInt($(this).val()); 
 
-        
-//         $.ajax({  
-//             url: 'http://localhost:8081/countries',  
-//             type: 'GET',  
-//             dataType: 'json',  
-//             success: function (d) {  
-//                 $.each(d, function (i, country) {  
-//                     ddlCountry.append($("<option></option>").val(country.CountryId).html(country.CountryName));  
-//                 });  
-//             },  
-//             error: function () {  
-//                 alert('Error!');  
-//             }  
-//         });  
-  
-        //State details by country id  
-  
-//         $("#ddlCountry").change(function () {  
-//             var CountryId = parseInt($(this).val());  
-  
-//             if (!isNaN(CountryId)) {  
-//                 var ddlState = $('#ddlState');  
-//                 ddlState.empty();  
-//                 ddlState.append($("<option></option>").val('').html('Please wait ...'));  
-  
-//                 debugger;  
-//                 $.ajax({  
-//                     url: 'http://localhost:54188/api/Cascading/StateDetails',  
-//                     type: 'GET',  
-//                     dataType: 'json',  
-//                     data: { CountryId: CountryId },  
-//                     success: function (d) {  
-  
-//                         ddlState.empty(); // Clear the please wait  
-//                         ddlState.append($("<option></option>").val('').html('Select State'));  
-//                         $.each(d, function (i, states) {  
-//                             ddlState.append($("<option></option>").val(states.StateId).html(states.StateName));  
-//                         });  
-//                     },  
-//                     error: function () {  
-//                         alert('Error!');  
-//                     }  
-//                 });  
-//             }   
-//         });  
-  
-//         //City Bind By satate id  
-//         $("#ddlState").change(function () {  
-//             var StateId = parseInt($(this).val());  
-//             if (!isNaN(StateId)) {  
-//                 var ddlCity = $('#ddlCity');  
-//                 ddlCity.append($("<option></option>").val('').html('Please wait ...'));  
-  
-//                 debugger;  
-//                 $.ajax({  
-//                     url: 'http://localhost:54188/api/Cascading/CityDetails',  
-//                     type: 'GET',  
-//                     dataType: 'json',  
-//                     data: { stateId: StateId },  
-//                     success: function (d) {  
-  
-  
-//                         ddlCity.empty(); // Clear the plese wait  
-//                         ddlCity.append($("<option></option>").val('').html('Select City Name'));  
-//                         $.each(d, function (i, cities) {  
-//                             ddlCity.append($("<option></option>").val(cities.CityId).html(cities.CityName));  
-//                         });  
-//                     },  
-//                     error: function () {  
-//                         alert('Error!');  
-//                     }  
-//                 });  
-//             }  
-  
-  
-//         });  
-    });  
+            if (!isNaN(stateId)) {  
+                var ddlCity = $('#ddlCity');  
+                var ur = 'cities/' + stateId;
+              
+                //ddlState.empty();  
+                ddlCity.append($("<option></option>").val('').html('Please wait ...'));
+
+                $.get(ur, function(responseJson) {
+                    var $select = $("#ddlCity");
+                    $select.find("option").remove();  
+                    $.each(responseJson, function(index, city) {                        
+                        $("<option>").val(city.cityId).text(city.cityName).appendTo($select);                    	
+                    });                   
+                     
+                });
+            }
+        });  
+
+    });
+    
 </script>
 
 
